--- a/univar-mongodb/docker-compose.yml
+++ b/univar-mongodb/docker-compose.yml
@@ -1,9 +1,30 @@
 services:
   configsvr:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: configsvr
-    command: ["mongod", "--configsvr", "--replSet", "configReplSet", "--port", "27017", "--bind_ip_all", "--wiredTigerJournalCompressor", "zstd", "--zstdDefaultCompressionLevel", "14", "--wiredTigerCollectionBlockCompressor", "zstd", "--wiredTigerCacheSizeGB", "2", "--dbpath", "/data/db", "--keyFile", "/key/mongo-keyfile"]
+    command:
+      [
+        "mongod",
+        "--configsvr",
+        "--replSet",
+        "configReplSet",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+        "--wiredTigerJournalCompressor",
+        "zstd",
+        "--zstdDefaultCompressionLevel",
+        "14",
+        "--wiredTigerCollectionBlockCompressor",
+        "zstd",
+        "--wiredTigerCacheSizeGB",
+        "2",
+        "--dbpath",
+        "/data/db",
+        "--keyFile",
+        "/key/mongo-keyfile",
+      ]
     volumes:
       - ./mongo-sharded/configsvr-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
@@ -13,10 +34,31 @@ services:
       - mongos_internal
 
   shard1:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: shard1
-    command: ["mongod", "--shardsvr", "--replSet", "shard1ReplSet", "--port", "27017", "--bind_ip_all", "--wiredTigerJournalCompressor", "zstd", "--zstdDefaultCompressionLevel", "14", "--wiredTigerCollectionBlockCompressor", "zstd", "--wiredTigerCacheSizeGB", "32", "--dbpath", "/data/db", "--keyFile", "/key/mongo-keyfile"]
+    command:
+      [
+        "mongod",
+        "--shardsvr",
+        "--replSet",
+        "shard1ReplSet",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+        "--wiredTigerJournalCompressor",
+        "zstd",
+        "--zstdDefaultCompressionLevel",
+        "14",
+        "--wiredTigerCollectionBlockCompressor",
+        "zstd",
+        "--wiredTigerCacheSizeGB",
+        "32",
+        "--dbpath",
+        "/data/db",
+        "--keyFile",
+        "/key/mongo-keyfile",
+      ]
     volumes:
       - ./mongo-sharded/shard1-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
@@ -26,10 +68,31 @@ services:
       - mongos_internal
 
   shard2:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: shard2
-    command: ["mongod", "--shardsvr", "--replSet", "shard2ReplSet", "--port", "27017", "--bind_ip_all", "--wiredTigerJournalCompressor", "zstd", "--zstdDefaultCompressionLevel", "14", "--wiredTigerCollectionBlockCompressor", "zstd", "--wiredTigerCacheSizeGB", "32", "--dbpath", "/data/db", "--keyFile", "/key/mongo-keyfile"]
+    command:
+      [
+        "mongod",
+        "--shardsvr",
+        "--replSet",
+        "shard2ReplSet",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+        "--wiredTigerJournalCompressor",
+        "zstd",
+        "--zstdDefaultCompressionLevel",
+        "14",
+        "--wiredTigerCollectionBlockCompressor",
+        "zstd",
+        "--wiredTigerCacheSizeGB",
+        "32",
+        "--dbpath",
+        "/data/db",
+        "--keyFile",
+        "/key/mongo-keyfile",
+      ]
     volumes:
       - ./mongo-sharded/shard2-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
@@ -39,10 +102,31 @@ services:
       - mongos_internal
 
   shard3:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: shard3
-    command: ["mongod", "--shardsvr", "--replSet", "shard3ReplSet", "--port", "27017", "--bind_ip_all", "--wiredTigerJournalCompressor", "zstd", "--zstdDefaultCompressionLevel", "14", "--wiredTigerCollectionBlockCompressor", "zstd", "--wiredTigerCacheSizeGB", "32", "--dbpath", "/data/db", "--keyFile", "/key/mongo-keyfile"]
+    command:
+      [
+        "mongod",
+        "--shardsvr",
+        "--replSet",
+        "shard3ReplSet",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+        "--wiredTigerJournalCompressor",
+        "zstd",
+        "--zstdDefaultCompressionLevel",
+        "14",
+        "--wiredTigerCollectionBlockCompressor",
+        "zstd",
+        "--wiredTigerCacheSizeGB",
+        "32",
+        "--dbpath",
+        "/data/db",
+        "--keyFile",
+        "/key/mongo-keyfile",
+      ]
     volumes:
       - ./mongo-sharded/shard3-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
@@ -52,10 +136,31 @@ services:
       - mongos_internal
 
   shard4:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: shard4
-    command: ["mongod", "--shardsvr", "--replSet", "shard4ReplSet", "--port", "27017", "--bind_ip_all", "--wiredTigerJournalCompressor", "zstd", "--zstdDefaultCompressionLevel", "14", "--wiredTigerCollectionBlockCompressor", "zstd", "--wiredTigerCacheSizeGB", "32", "--dbpath", "/data/db", "--keyFile", "/key/mongo-keyfile"]
+    command:
+      [
+        "mongod",
+        "--shardsvr",
+        "--replSet",
+        "shard4ReplSet",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+        "--wiredTigerJournalCompressor",
+        "zstd",
+        "--zstdDefaultCompressionLevel",
+        "14",
+        "--wiredTigerCollectionBlockCompressor",
+        "zstd",
+        "--wiredTigerCacheSizeGB",
+        "32",
+        "--dbpath",
+        "/data/db",
+        "--keyFile",
+        "/key/mongo-keyfile",
+      ]
     volumes:
       - ./mongo-sharded/shard4-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
@@ -65,10 +170,20 @@ services:
       - mongos_internal
 
   mongos:
-    image: mongo:8.0.6-noble
+    image: mongo:8.0.15-noble
     user: ${UID_GID}
     container_name: mongos
-    command: ["mongos", "--keyFile", "/key/mongo-keyfile", "--configdb", "configReplSet/configsvr:27017", "--port", "27017", "--bind_ip_all"]
+    command:
+      [
+        "mongos",
+        "--keyFile",
+        "/key/mongo-keyfile",
+        "--configdb",
+        "configReplSet/configsvr:27017",
+        "--port",
+        "27017",
+        "--bind_ip_all",
+      ]
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD_FILE: /run/secrets/mongo-root-password
@@ -90,7 +205,6 @@ services:
     networks:
       - univar_network
       - mongos_internal
-
 
 secrets:
   mongo-root-password:
