--- a/univar-backend/package.json
+++ b/univar-backend/package.json
@@ -22,67 +22,67 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.782.0",
-    "@aws-sdk/s3-request-presigner": "^3.782.0",
+    "@aws-sdk/client-s3": "^3.911.0",
+    "@aws-sdk/s3-request-presigner": "^3.911.0",
     "@hokify/agenda": "^6.3.0",
     "@json2csv/plainjs": "^7.0.6",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/common": "^11.0.13",
+    "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.13",
+    "@nestjs/core": "^11.1.6",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.13",
-    "@nestjs/swagger": "^11.1.1",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
-    "@nestjs/websockets": "^11.0.13",
+    "@nestjs/websockets": "^11.1.6",
     "aws-sdk-v3-nest": "^1.0.1",
-    "axios": "^1.8.4",
-    "cache-manager": "^6.4.2",
+    "axios": "^1.12.2",
+    "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "compression": "^1.8.0",
-    "csv-parse": "^5.6.0",
-    "dotenv": "^16.4.7",
+    "class-validator": "^0.14.2",
+    "compression": "^1.8.1",
+    "csv-parse": "^6.1.0",
+    "dotenv": "^17.2.3",
     "etag": "^1.8.1",
     "helmet": "^8.1.0",
     "jwt-decode": "^4.0.0",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.0",
-    "openid-client": "^6.4.1",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1",
+    "nodemailer": "^7.0.9",
+    "openid-client": "^6.8.1",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "rxjs": "^7.8.2",
-    "sanitize-html": "^2.15.0",
-    "yaml": "^2.7.1",
+    "sanitize-html": "^2.17.0",
+    "yaml": "^2.8.1",
     "zlib": "^1.0.5",
-    "zod": "^3.24.2"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@nestjs/cli": "^11.0.6",
-    "@nestjs/testing": "^11.0.13",
-    "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/multer": "^1.4.12",
-    "@types/node": "22.13.5",
+    "@nestjs/cli": "^11.0.10",
+    "@nestjs/testing": "^11.1.6",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
+    "@types/node": "24.8.1",
     "@types/passport-local": "^1.0.38",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
-    "@typescript-eslint/parser": "^8.29.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-tsdoc": "^0.4.0",
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "jsonwebtoken": "^9.0.2",
-    "node-mocks-http": "^1.16.2",
-    "prettier": "^3.5.3",
-    "ts-jest": "^29.3.1",
+    "node-mocks-http": "^1.17.2",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   },
   "pnpm": {
     "overrides": {
@@ -95,7 +95,8 @@
     "onlyBuiltDependencies": [
       "@nestjs/core",
       "@scarf/scarf",
-      "chromedriver"
+      "chromedriver",
+      "unrs-resolver"
     ]
   }
 }
