--- a/univar-mongodb/docker-compose.yml
+++ b/univar-mongodb/docker-compose.yml
@@ -4,32 +4,18 @@ services:
     user: ${UID_GID}
     container_name: configsvr
     command:
-      [
-        "mongod",
-        "--configsvr",
-        "--replSet",
-        "configReplSet",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-        "--wiredTigerJournalCompressor",
-        "zstd",
-        "--zstdDefaultCompressionLevel",
-        "14",
-        "--wiredTigerCollectionBlockCompressor",
-        "zstd",
-        "--wiredTigerCacheSizeGB",
-        "2",
-        "--dbpath",
-        "/data/db",
-        "--keyFile",
-        "/key/mongo-keyfile",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongod --configsvr --replSet configReplSet --port 27017 --bind_ip_all --wiredTigerJournalCompressor zstd --zstdDefaultCompressionLevel 14 --wiredTigerCollectionBlockCompressor zstd --wiredTigerCacheSizeGB 20 --dbpath /data/db --keyFile /key/mongo-keyfile
     volumes:
       - ./mongo-sharded/configsvr-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
       - ./init-configsvr.js:/init/init-configsvr.js:ro
     restart: always
+    mem_limit: 50g
+    memswap_limit: 50g
     networks:
       - mongos_internal
 
@@ -38,32 +24,18 @@ services:
     user: ${UID_GID}
     container_name: shard1
     command:
-      [
-        "mongod",
-        "--shardsvr",
-        "--replSet",
-        "shard1ReplSet",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-        "--wiredTigerJournalCompressor",
-        "zstd",
-        "--zstdDefaultCompressionLevel",
-        "14",
-        "--wiredTigerCollectionBlockCompressor",
-        "zstd",
-        "--wiredTigerCacheSizeGB",
-        "32",
-        "--dbpath",
-        "/data/db",
-        "--keyFile",
-        "/key/mongo-keyfile",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongod --shardsvr --replSet shard1ReplSet --port 27017 --bind_ip_all --wiredTigerJournalCompressor zstd --zstdDefaultCompressionLevel 14 --wiredTigerCollectionBlockCompressor zstd --wiredTigerCacheSizeGB 150 --dbpath /data/db --keyFile /key/mongo-keyfile
     volumes:
       - ./mongo-sharded/shard1-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
       - ./init-shard1.js:/init/init-shard1.js:ro
     restart: always
+    mem_limit: 600g
+    memswap_limit: 600g
     networks:
       - mongos_internal
 
@@ -72,32 +44,18 @@ services:
     user: ${UID_GID}
     container_name: shard2
     command:
-      [
-        "mongod",
-        "--shardsvr",
-        "--replSet",
-        "shard2ReplSet",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-        "--wiredTigerJournalCompressor",
-        "zstd",
-        "--zstdDefaultCompressionLevel",
-        "14",
-        "--wiredTigerCollectionBlockCompressor",
-        "zstd",
-        "--wiredTigerCacheSizeGB",
-        "32",
-        "--dbpath",
-        "/data/db",
-        "--keyFile",
-        "/key/mongo-keyfile",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongod --shardsvr --replSet shard2ReplSet --port 27017 --bind_ip_all --wiredTigerJournalCompressor zstd --zstdDefaultCompressionLevel 14 --wiredTigerCollectionBlockCompressor zstd --wiredTigerCacheSizeGB 150 --dbpath /data/db --keyFile /key/mongo-keyfile
     volumes:
       - ./mongo-sharded/shard2-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
       - ./init-shard2.js:/init/init-shard2.js:ro
     restart: always
+    mem_limit: 600g
+    memswap_limit: 600g
     networks:
       - mongos_internal
 
@@ -106,32 +64,18 @@ services:
     user: ${UID_GID}
     container_name: shard3
     command:
-      [
-        "mongod",
-        "--shardsvr",
-        "--replSet",
-        "shard3ReplSet",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-        "--wiredTigerJournalCompressor",
-        "zstd",
-        "--zstdDefaultCompressionLevel",
-        "14",
-        "--wiredTigerCollectionBlockCompressor",
-        "zstd",
-        "--wiredTigerCacheSizeGB",
-        "32",
-        "--dbpath",
-        "/data/db",
-        "--keyFile",
-        "/key/mongo-keyfile",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongod --shardsvr --replSet shard3ReplSet --port 27017 --bind_ip_all --wiredTigerJournalCompressor zstd --zstdDefaultCompressionLevel 14 --wiredTigerCollectionBlockCompressor zstd --wiredTigerCacheSizeGB 150 --dbpath /data/db --keyFile /key/mongo-keyfile
     volumes:
       - ./mongo-sharded/shard3-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
       - ./init-shard3.js:/init/init-shard3.js:ro
     restart: always
+    mem_limit: 600g
+    memswap_limit: 600g
     networks:
       - mongos_internal
 
@@ -140,32 +84,18 @@ services:
     user: ${UID_GID}
     container_name: shard4
     command:
-      [
-        "mongod",
-        "--shardsvr",
-        "--replSet",
-        "shard4ReplSet",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-        "--wiredTigerJournalCompressor",
-        "zstd",
-        "--zstdDefaultCompressionLevel",
-        "14",
-        "--wiredTigerCollectionBlockCompressor",
-        "zstd",
-        "--wiredTigerCacheSizeGB",
-        "32",
-        "--dbpath",
-        "/data/db",
-        "--keyFile",
-        "/key/mongo-keyfile",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongod --shardsvr --replSet shard4ReplSet --port 27017 --bind_ip_all --wiredTigerJournalCompressor zstd --zstdDefaultCompressionLevel 14 --wiredTigerCollectionBlockCompressor zstd --wiredTigerCacheSizeGB 150 --dbpath /data/db --keyFile /key/mongo-keyfile
     volumes:
       - ./mongo-sharded/shard4-data:/data/db
       - ./mongo-keyfile:/key/mongo-keyfile:ro
       - ./init-shard4.js:/init/init-shard4.js:ro
     restart: always
+    mem_limit: 600g
+    memswap_limit: 600g
     networks:
       - mongos_internal
 
@@ -174,16 +104,11 @@ services:
     user: ${UID_GID}
     container_name: mongos
     command:
-      [
-        "mongos",
-        "--keyFile",
-        "/key/mongo-keyfile",
-        "--configdb",
-        "configReplSet/configsvr:27017",
-        "--port",
-        "27017",
-        "--bind_ip_all",
-      ]
+      - sh
+      - -c
+      - |
+        echo -900 > /proc/self/oom_score_adj;
+        exec mongos --keyFile /key/mongo-keyfile --configdb configReplSet/configsvr:27017 --port 27017 --bind_ip_all
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD_FILE: /run/secrets/mongo-root-password
@@ -202,6 +127,8 @@ services:
       - shard3
       - shard4
     restart: always
+    mem_limit: 50g
+    memswap_limit: 50g
     networks:
       - univar_network
       - mongos_internal
