--- a/variant-import-tool/requirements.txt
+++ b/variant-import-tool/requirements.txt
@@ -1,10 +1,11 @@
-pandas
-pymongo
-bigjson
-liftover
-numpy
-ijson
-boto3
-requests
-pyarrow
-civicpy
+pandas>=2.3.3
+pymongo>=4.15.3
+bigjson>=1.0.9
+liftover>=1.3.3
+numpy>=2.3.4
+ijson>=3.4.0
+boto3>=1.40.56
+requests>=2.32.5
+pyarrow>=21.0.0
+tenacity>=9.1.2
+# civicpy
